recursion.logo.koch.SquareKoch.scala.error
Erreur de compilation :
SquareKoch:30: error: expected start of definition
	override def run() {
                 ^SquareKoch:33: error: Unmatched closing brace '}' ignored here
}
^